parser/antlr-generated/org/simplesql/parser/SQLParser.java
// $ANTLR 3.4 /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g 2012-02-13 10:51:56

  package org.simplesql.parser;
  
  import org.simplesql.parser.tree.*;
  


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class SQLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BOOL", "BY", "DOUBLE", "EXPRESSION", "FROM", "FUNC", "GROUP", "IDENT", "INTEGER", "LIMIT", "LOGICAL", "LOGICAL_TOKEN", "MINUS", "MULT_TOKEN", "NEGATION_TOKEN", "NUMBER", "ORDER", "PLUS", "REAL_NUMBER", "RELATION", "RELATION_TOKEN", "SELECT", "STRING", "STRING_LITERAL", "UNARY", "VARIABLE", "WHERE", "WS", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "';'", "'mod'"
    };

    public static final int EOF=-1;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int BOOL=4;
    public static final int BY=5;
    public static final int DOUBLE=6;
    public static final int EXPRESSION=7;
    public static final int FROM=8;
    public static final int FUNC=9;
    public static final int GROUP=10;
    public static final int IDENT=11;
    public static final int INTEGER=12;
    public static final int LIMIT=13;
    public static final int LOGICAL=14;
    public static final int LOGICAL_TOKEN=15;
    public static final int MINUS=16;
    public static final int MULT_TOKEN=17;
    public static final int NEGATION_TOKEN=18;
    public static final int NUMBER=19;
    public static final int ORDER=20;
    public static final int PLUS=21;
    public static final int REAL_NUMBER=22;
    public static final int RELATION=23;
    public static final int RELATION_TOKEN=24;
    public static final int SELECT=25;
    public static final int STRING=26;
    public static final int STRING_LITERAL=27;
    public static final int UNARY=28;
    public static final int VARIABLE=29;
    public static final int WHERE=30;
    public static final int WS=31;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public SQLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public SQLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return SQLParser.tokenNames; }
    public String getGrammarFileName() { return "/home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g"; }


      
      public SELECT select;
      public static final java.util.Set<String> variables = new java.util.HashSet<String>();


    public static class statement_return extends ParserRuleReturnScope {
        public SELECT ret = new SELECT(variables);;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:46:1: statement returns [SELECT ret = new SELECT(variables);] : SELECT (se1= expression ) ( ',' (se1= expression ) )* FROM IDENT ( ( WHERE w1= logical ) | ( 'GROUP' 'BY' (gpe1= expression ) ( ',' (gpe1= expression ) )* ) | ( 'ORDER' 'BY' (ope1= expression ) ( ',' (ope1= expression ) )* ) | ( 'LIMIT' l= INTEGER ) )* ( ';' )* ;
    public final SQLParser.statement_return statement() throws RecognitionException {
        SQLParser.statement_return retval = new SQLParser.statement_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token l=null;
        Token SELECT1=null;
        Token char_literal2=null;
        Token FROM3=null;
        Token IDENT4=null;
        Token WHERE5=null;
        Token string_literal6=null;
        Token string_literal7=null;
        Token char_literal8=null;
        Token string_literal9=null;
        Token string_literal10=null;
        Token char_literal11=null;
        Token string_literal12=null;
        Token char_literal13=null;
        SQLParser.expression_return se1 =null;

        SQLParser.logical_return w1 =null;

        SQLParser.expression_return gpe1 =null;

        SQLParser.expression_return ope1 =null;


        Object l_tree=null;
        Object SELECT1_tree=null;
        Object char_literal2_tree=null;
        Object FROM3_tree=null;
        Object IDENT4_tree=null;
        Object WHERE5_tree=null;
        Object string_literal6_tree=null;
        Object string_literal7_tree=null;
        Object char_literal8_tree=null;
        Object string_literal9_tree=null;
        Object string_literal10_tree=null;
        Object char_literal11_tree=null;
        Object string_literal12_tree=null;
        Object char_literal13_tree=null;

        try {
            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:47:12: ( SELECT (se1= expression ) ( ',' (se1= expression ) )* FROM IDENT ( ( WHERE w1= logical ) | ( 'GROUP' 'BY' (gpe1= expression ) ( ',' (gpe1= expression ) )* ) | ( 'ORDER' 'BY' (ope1= expression ) ( ',' (ope1= expression ) )* ) | ( 'LIMIT' l= INTEGER ) )* ( ';' )* )
            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:47:14: SELECT (se1= expression ) ( ',' (se1= expression ) )* FROM IDENT ( ( WHERE w1= logical ) | ( 'GROUP' 'BY' (gpe1= expression ) ( ',' (gpe1= expression ) )* ) | ( 'ORDER' 'BY' (ope1= expression ) ( ',' (ope1= expression ) )* ) | ( 'LIMIT' l= INTEGER ) )* ( ';' )*
            {
            root_0 = (Object)adaptor.nil();


            SELECT1=(Token)match(input,SELECT,FOLLOW_SELECT_in_statement151); 
            SELECT1_tree = 
            (Object)adaptor.create(SELECT1)
            ;
            adaptor.addChild(root_0, SELECT1_tree);


            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:47:21: (se1= expression )
            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:47:22: se1= expression
            {
            pushFollow(FOLLOW_expression_in_statement156);
            se1=expression();

            state._fsp--;

            adaptor.addChild(root_0, se1.getTree());

             select = retval.ret;  retval.ret.select((se1!=null?se1.expr:null));

            }


            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:48:21: ( ',' (se1= expression ) )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==36) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:48:22: ',' (se1= expression )
            	    {
            	    char_literal2=(Token)match(input,36,FOLLOW_36_in_statement183); 
            	    char_literal2_tree = 
            	    (Object)adaptor.create(char_literal2)
            	    ;
            	    adaptor.addChild(root_0, char_literal2_tree);


            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:48:26: (se1= expression )
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:48:27: se1= expression
            	    {
            	    pushFollow(FOLLOW_expression_in_statement188);
            	    se1=expression();

            	    state._fsp--;

            	    adaptor.addChild(root_0, se1.getTree());

            	    retval.ret.select((se1!=null?se1.expr:null));

            	    }


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            FROM3=(Token)match(input,FROM,FOLLOW_FROM_in_statement195); 
            FROM3_tree = 
            (Object)adaptor.create(FROM3)
            ;
            adaptor.addChild(root_0, FROM3_tree);


            IDENT4=(Token)match(input,IDENT,FOLLOW_IDENT_in_statement197); 
            IDENT4_tree = 
            (Object)adaptor.create(IDENT4)
            ;
            adaptor.addChild(root_0, IDENT4_tree);


            retval.ret.table((IDENT4!=null?IDENT4.getText():null));

            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:49:13: ( ( WHERE w1= logical ) | ( 'GROUP' 'BY' (gpe1= expression ) ( ',' (gpe1= expression ) )* ) | ( 'ORDER' 'BY' (ope1= expression ) ( ',' (ope1= expression ) )* ) | ( 'LIMIT' l= INTEGER ) )*
            loop4:
            do {
                int alt4=5;
                switch ( input.LA(1) ) {
                case WHERE:
                    {
                    alt4=1;
                    }
                    break;
                case GROUP:
                    {
                    alt4=2;
                    }
                    break;
                case ORDER:
                    {
                    alt4=3;
                    }
                    break;
                case LIMIT:
                    {
                    alt4=4;
                    }
                    break;

                }

                switch (alt4) {
            	case 1 :
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:50:13: ( WHERE w1= logical )
            	    {
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:50:13: ( WHERE w1= logical )
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:50:14: WHERE w1= logical
            	    {
            	    WHERE5=(Token)match(input,WHERE,FOLLOW_WHERE_in_statement229); 
            	    WHERE5_tree = 
            	    (Object)adaptor.create(WHERE5)
            	    ;
            	    adaptor.addChild(root_0, WHERE5_tree);


            	    pushFollow(FOLLOW_logical_in_statement233);
            	    w1=logical();

            	    state._fsp--;

            	    adaptor.addChild(root_0, w1.getTree());

            	    retval.ret.where((w1!=null?w1.ret:null));

            	    }


            	    }
            	    break;
            	case 2 :
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:52:13: ( 'GROUP' 'BY' (gpe1= expression ) ( ',' (gpe1= expression ) )* )
            	    {
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:52:13: ( 'GROUP' 'BY' (gpe1= expression ) ( ',' (gpe1= expression ) )* )
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:52:14: 'GROUP' 'BY' (gpe1= expression ) ( ',' (gpe1= expression ) )*
            	    {
            	    string_literal6=(Token)match(input,GROUP,FOLLOW_GROUP_in_statement275); 
            	    string_literal6_tree = 
            	    (Object)adaptor.create(string_literal6)
            	    ;
            	    adaptor.addChild(root_0, string_literal6_tree);


            	    string_literal7=(Token)match(input,BY,FOLLOW_BY_in_statement277); 
            	    string_literal7_tree = 
            	    (Object)adaptor.create(string_literal7)
            	    ;
            	    adaptor.addChild(root_0, string_literal7_tree);


            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:52:27: (gpe1= expression )
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:52:28: gpe1= expression
            	    {
            	    pushFollow(FOLLOW_expression_in_statement282);
            	    gpe1=expression();

            	    state._fsp--;

            	    adaptor.addChild(root_0, gpe1.getTree());

            	    retval.ret.groupBy((gpe1!=null?gpe1.expr:null));

            	    }


            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:53:22: ( ',' (gpe1= expression ) )*
            	    loop2:
            	    do {
            	        int alt2=2;
            	        int LA2_0 = input.LA(1);

            	        if ( (LA2_0==36) ) {
            	            alt2=1;
            	        }


            	        switch (alt2) {
            	    	case 1 :
            	    	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:53:23: ',' (gpe1= expression )
            	    	    {
            	    	    char_literal8=(Token)match(input,36,FOLLOW_36_in_statement310); 
            	    	    char_literal8_tree = 
            	    	    (Object)adaptor.create(char_literal8)
            	    	    ;
            	    	    adaptor.addChild(root_0, char_literal8_tree);


            	    	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:53:27: (gpe1= expression )
            	    	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:53:28: gpe1= expression
            	    	    {
            	    	    pushFollow(FOLLOW_expression_in_statement315);
            	    	    gpe1=expression();

            	    	    state._fsp--;

            	    	    adaptor.addChild(root_0, gpe1.getTree());

            	    	    retval.ret.groupBy((gpe1!=null?gpe1.expr:null));

            	    	    }


            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop2;
            	        }
            	    } while (true);


            	    }


            	    }
            	    break;
            	case 3 :
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:55:13: ( 'ORDER' 'BY' (ope1= expression ) ( ',' (ope1= expression ) )* )
            	    {
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:55:13: ( 'ORDER' 'BY' (ope1= expression ) ( ',' (ope1= expression ) )* )
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:55:14: 'ORDER' 'BY' (ope1= expression ) ( ',' (ope1= expression ) )*
            	    {
            	    string_literal9=(Token)match(input,ORDER,FOLLOW_ORDER_in_statement359); 
            	    string_literal9_tree = 
            	    (Object)adaptor.create(string_literal9)
            	    ;
            	    adaptor.addChild(root_0, string_literal9_tree);


            	    string_literal10=(Token)match(input,BY,FOLLOW_BY_in_statement361); 
            	    string_literal10_tree = 
            	    (Object)adaptor.create(string_literal10)
            	    ;
            	    adaptor.addChild(root_0, string_literal10_tree);


            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:55:27: (ope1= expression )
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:55:28: ope1= expression
            	    {
            	    pushFollow(FOLLOW_expression_in_statement366);
            	    ope1=expression();

            	    state._fsp--;

            	    adaptor.addChild(root_0, ope1.getTree());

            	    retval.ret.orderBy((ope1!=null?ope1.expr:null));

            	    }


            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:56:22: ( ',' (ope1= expression ) )*
            	    loop3:
            	    do {
            	        int alt3=2;
            	        int LA3_0 = input.LA(1);

            	        if ( (LA3_0==36) ) {
            	            alt3=1;
            	        }


            	        switch (alt3) {
            	    	case 1 :
            	    	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:56:23: ',' (ope1= expression )
            	    	    {
            	    	    char_literal11=(Token)match(input,36,FOLLOW_36_in_statement394); 
            	    	    char_literal11_tree = 
            	    	    (Object)adaptor.create(char_literal11)
            	    	    ;
            	    	    adaptor.addChild(root_0, char_literal11_tree);


            	    	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:56:27: (ope1= expression )
            	    	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:56:28: ope1= expression
            	    	    {
            	    	    pushFollow(FOLLOW_expression_in_statement399);
            	    	    ope1=expression();

            	    	    state._fsp--;

            	    	    adaptor.addChild(root_0, ope1.getTree());

            	    	    retval.ret.orderBy((ope1!=null?ope1.expr:null));

            	    	    }


            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop3;
            	        }
            	    } while (true);


            	    }


            	    }
            	    break;
            	case 4 :
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:58:13: ( 'LIMIT' l= INTEGER )
            	    {
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:58:13: ( 'LIMIT' l= INTEGER )
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:58:14: 'LIMIT' l= INTEGER
            	    {
            	    string_literal12=(Token)match(input,LIMIT,FOLLOW_LIMIT_in_statement443); 
            	    string_literal12_tree = 
            	    (Object)adaptor.create(string_literal12)
            	    ;
            	    adaptor.addChild(root_0, string_literal12_tree);


            	    l=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_statement447); 
            	    l_tree = 
            	    (Object)adaptor.create(l)
            	    ;
            	    adaptor.addChild(root_0, l_tree);


            	    retval.ret.limit((l!=null?l.getText():null));

            	    }


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:60:13: ( ';' )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==39) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:60:13: ';'
            	    {
            	    char_literal13=(Token)match(input,39,FOLLOW_39_in_statement479); 
            	    char_literal13_tree = 
            	    (Object)adaptor.create(char_literal13)
            	    ;
            	    adaptor.addChild(root_0, char_literal13_tree);


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "statement"


    public static class unary_return extends ParserRuleReturnScope {
        public UNARY unary = new UNARY();
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "unary"
    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:70:1: unary returns [UNARY unary = new UNARY()] : (v1= funct |v2= term );
    public final SQLParser.unary_return unary() throws RecognitionException {
        SQLParser.unary_return retval = new SQLParser.unary_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        SQLParser.funct_return v1 =null;

        SQLParser.term_return v2 =null;



        try {
            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:71:2: (v1= funct |v2= term )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==IDENT) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==32) ) {
                    alt6=1;
                }
                else if ( (LA6_1==EOF||LA6_1==FROM||LA6_1==GROUP||(LA6_1 >= LIMIT && LA6_1 <= LOGICAL)||LA6_1==ORDER||LA6_1==RELATION||LA6_1==WHERE||(LA6_1 >= 33 && LA6_1 <= 40)) ) {
                    alt6=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;

                }
            }
            else if ( (LA6_0==BOOL||LA6_0==DOUBLE||LA6_0==INTEGER||LA6_0==STRING_LITERAL||LA6_0==32) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }
            switch (alt6) {
                case 1 :
                    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:72:7: v1= funct
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_funct_in_unary510);
                    v1=funct();

                    state._fsp--;

                    adaptor.addChild(root_0, v1.getTree());

                    retval.unary.term((v1!=null?v1.f:null));

                    }
                    break;
                case 2 :
                    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:73:9: v2= term
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_term_in_unary524);
                    v2=term();

                    state._fsp--;

                    adaptor.addChild(root_0, v2.getTree());

                    retval.unary.term((v2!=null?v2.term:null));

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "unary"


    public static class mult_return extends ParserRuleReturnScope {
        public MULT ret = new MULT();
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "mult"
    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:78:1: mult returns [MULT ret = new MULT()] : u1= unary ( (t= '*' |t= '/' |t= 'mod' ) u2= unary )* ;
    public final SQLParser.mult_return mult() throws RecognitionException {
        SQLParser.mult_return retval = new SQLParser.mult_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token t=null;
        SQLParser.unary_return u1 =null;

        SQLParser.unary_return u2 =null;


        Object t_tree=null;

        try {
            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:79:4: (u1= unary ( (t= '*' |t= '/' |t= 'mod' ) u2= unary )* )
            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:80:5: u1= unary ( (t= '*' |t= '/' |t= 'mod' ) u2= unary )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_unary_in_mult562);
            u1=unary();

            state._fsp--;

            adaptor.addChild(root_0, u1.getTree());

            retval.ret.unary((u1!=null?u1.unary:null));

            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:81:5: ( (t= '*' |t= '/' |t= 'mod' ) u2= unary )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==34||LA8_0==38||LA8_0==40) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:81:6: (t= '*' |t= '/' |t= 'mod' ) u2= unary
            	    {
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:81:6: (t= '*' |t= '/' |t= 'mod' )
            	    int alt7=3;
            	    switch ( input.LA(1) ) {
            	    case 34:
            	        {
            	        alt7=1;
            	        }
            	        break;
            	    case 38:
            	        {
            	        alt7=2;
            	        }
            	        break;
            	    case 40:
            	        {
            	        alt7=3;
            	        }
            	        break;
            	    default:
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 7, 0, input);

            	        throw nvae;

            	    }

            	    switch (alt7) {
            	        case 1 :
            	            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:81:7: t= '*'
            	            {
            	            t=(Token)match(input,34,FOLLOW_34_in_mult574); 
            	            t_tree = 
            	            (Object)adaptor.create(t)
            	            ;
            	            adaptor.addChild(root_0, t_tree);


            	            retval.ret.mult();

            	            }
            	            break;
            	        case 2 :
            	            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:81:30: t= '/'
            	            {
            	            t=(Token)match(input,38,FOLLOW_38_in_mult582); 
            	            t_tree = 
            	            (Object)adaptor.create(t)
            	            ;
            	            adaptor.addChild(root_0, t_tree);


            	            retval.ret.divide();

            	            }
            	            break;
            	        case 3 :
            	            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:82:7: t= 'mod'
            	            {
            	            t=(Token)match(input,40,FOLLOW_40_in_mult594); 
            	            t_tree = 
            	            (Object)adaptor.create(t)
            	            ;
            	            adaptor.addChild(root_0, t_tree);


            	            retval.ret.mod();

            	            }
            	            break;

            	    }


            	    pushFollow(FOLLOW_unary_in_mult606);
            	    u2=unary();

            	    state._fsp--;

            	    adaptor.addChild(root_0, u2.getTree());

            	    retval.ret.unary((u2!=null?u2.unary:null));

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "mult"


    public static class expression_return extends ParserRuleReturnScope {
        public EXPRESSION expr = new EXPRESSION();
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "expression"
    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:88:1: expression returns [EXPRESSION expr = new EXPRESSION()] : em1= mult ( (t+= '-' |t+= '+' ) em2= mult )* ;
    public final SQLParser.expression_return expression() throws RecognitionException {
        SQLParser.expression_return retval = new SQLParser.expression_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token t=null;
        List list_t=null;
        SQLParser.mult_return em1 =null;

        SQLParser.mult_return em2 =null;


        Object t_tree=null;

        try {
            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:89:4: (em1= mult ( (t+= '-' |t+= '+' ) em2= mult )* )
            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:89:6: em1= mult ( (t+= '-' |t+= '+' ) em2= mult )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_mult_in_expression637);
            em1=mult();

            state._fsp--;

            adaptor.addChild(root_0, em1.getTree());

            retval.expr.mult((em1!=null?em1.ret:null));

            // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:90:28: ( (t+= '-' |t+= '+' ) em2= mult )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==35||LA10_0==37) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:90:29: (t+= '-' |t+= '+' ) em2= mult
            	    {
            	    // /home/gvanvuuren/checkouts/SimpleSQL/parser/src/main/antlr3/org/simplesql/parser/SQL.g:90:29: (t+= '-' |t+= '+' )
            	    int alt9=2;
            	    int LA9_0 = input.LA(1);

            	    if ( (LA9_0==37) ) {
            	        alt9=1;
            	    }
            	    else if ( (LA9_0==35) ) {
            	        alt9=2;
            	    }
            	    else {
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 9, 0, input);

            	        throw nvae;
